--- a/src/style/layouts/_content.scss
+++ b/src/style/layouts/_content.scss
@@ -1,6 +1,29 @@
+.section {
+    padding: 4rem 0;
+
+    &.section--sm {
+        padding: 2rem 0;
+    }
+
+	&.section--page {
+		padding: 2.5rem 0 4rem 0;
+	}
+
+	@include media-breakpoint-down(md) {
+		padding: 2rem 0;
+	}
+}
+
+.entry-content {
+
+	ul li + li {
+		margin-top: .75rem;
+	}
+}
+
 .howAndWho {
 	background-color: #e4e4e4;
-	padding: 3.888888889rem 0;
+
 	@include media-breakpoint-up(lg) {
 		background: #e4e4e4 url(../images/watermark.svg) no-repeat center;
 		background-size: 808px 808px;
@@ -9,10 +32,10 @@
 	@include media-breakpoint-up(xl) {
 		background-position-x: 102%;
 	}
+
 	@include e(forWho) {
 		position: relative;
 		h2 {
-			font-family: $ff-2;
 			text-transform: uppercase;
 			font-size: 1rem;
 			font-weight: bold;
@@ -35,88 +58,36 @@
 		left: -2rem;
 		p {
 			font-size: 1.222rem;
-			font-family: $ff-2;
 			line-height: 1.5rem;
 		}
 		a {
 			text-transform: uppercase;
-			font-family: $ff-2;
 			font-weight: bold;
 			i {
 				padding-left: .5rem;
 			}
 		}
 	}
-}
 
-.callOut {
-	font-size: 1.333333333rem;
-	line-height: 1.75rem;
-	font-weight: medium;
-	font-family: $ff-2;
-}
-.btn {
-	color: white !important;
-	font-weight: bold;
-	font-family: $ff-2;
-	border-radius: 0;
-	padding: .5rem 1.5rem;
+    @include media-breakpoint-down(md) {
+        .callout {
+            margin-top: 2rem;
+        }
+    }
 }
 
 .meetDon {
-	background:#555555;
+	background: #555555;
 	color: rgba($white, .75);
-	h2 {
-		font-size: 1.8rem;
-		@include media-breakpoint-up(lg) {
-			font-size: 2rem;
-			font-weight: medium;
-		}
-	}
-	p {
-		@include media-breakpoint-between(sm,lg) {
-			font-size: .941176471rem;
-		}
-	}
-}
-#page-wrapper {
-	padding: 3rem 0 1rem;
-	@include media-breakpoint-up(sm) {
+
+	.meetDon--content {
 		padding: 3rem 0;
 	}
 }
-.pageContent {
-	h1 {
-		text-transform: uppercase;
-		font-size: 2.25rem;
-		margin-bottom: .5rem;
-		@include media-breakpoint-up(sm) {
-			font-size: 3.75rem;
-		}
-	}
-	h2 {
-		font-size: 1.8rem;
-		margin-bottom: .5rem;
-		@include media-breakpoint-up(sm) {
-			font-size: 2.5rem;
-		}
-	}
-	h3 {
-		font-size: 1.35rem;
-		@include media-breakpoint-up(sm) {
-			font-size: 1.75rem;
-		}
-	}
-	.introPar {
-		font-size: 1.222222222rem;
-	}
-	a {
-		text-decoration: underline;
-	}
-}
+
 .btn-success, #gform_wrapper_1 .gform_button {
-	background-color: $sitered;
-	border-color: $sitered;
+	background-color: $primary;
+	border-color: $primary;
 }
 #gform_wrapper_1 .gform_footer {
 	text-align: left !important;
@@ -141,5 +112,12 @@
 		@include media-breakpoint-down(lg) {
 			margin-top: 2rem;
 		}
+	}
+}
+
+#sidebar {
+
+	.callout + .callout {
+		margin-top: 2rem;
 	}
 }
