added google fonts && updated font-weights throughout

--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -36,7 +36,7 @@ $flickr-color: hsla(334, 100%, 46%, 1); // #ea0066
 
 // Fonts
 $font-family-sans-serif: 'Open Sans', -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-$font-family-serif: 'Raleway', 'Campton', Georgia, "Times New Roman", Times, serif;
+$font-family-serif: 'Merriweather', 'Campton', Georgia, "Times New Roman", Times, serif;
 $font-family-base: $font-family-sans-serif;
 $headings-font-family: $font-family-serif;
 
