--- a/src/style/layouts/_header.scss
+++ b/src/style/layouts/_header.scss
@@ -15,7 +15,7 @@
 	@include e(getStarted) {
 		a {
 			background-color: darken($top-bar-color, 15%);
-			font-weight: bold;
+			font-weight: 700;
 			i {
 				padding-left: 26px;
 				font-size: 1.5rem;
