--- a/src/style/layouts/_content.scss
+++ b/src/style/layouts/_content.scss
@@ -38,7 +38,7 @@
 		h2 {
 			text-transform: uppercase;
 			font-size: 1rem;
-			font-weight: bold;
+			font-weight: 700;
 			color: $primary-light;
 			margin-bottom: .3rem;
 		}
@@ -62,7 +62,7 @@
 		}
 		a {
 			text-transform: uppercase;
-			font-weight: bold;
+			font-weight: 700;
 			i {
 				padding-left: .5rem;
 			}
