--- a/src/style/base/_typography.scss
+++ b/src/style/base/_typography.scss
@@ -29,6 +29,7 @@ body {
 .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
     margin-bottom: 1rem;
     line-height: 1.3;
+    color: $headers;
 
     @include media-breakpoint-down(lg) {
         br {
@@ -42,35 +43,22 @@ body {
 }
 
 .h1, h1 {
-    font-size: 2.25rem;
-
-    @include media-breakpoint-down(md) {
-        font-size: 2rem;
-    }
+    font-size: 2.34rem;//42
 }
 
 .h2, h2 {
-    font-size: 2rem;
-
-    @include media-breakpoint-down(md) {
-        font-size: 1.5rem;
-    }
+    font-size: 1.9rem;//34
 }
 
 .h3, h3 {
-    @include media-breakpoint-down(md) {
-        font-size: 1.35rem;
-    }
+    font-size: 1.45rem;//26
 }
 
 .h4, h4 {
+    font-size: 1.35rem;//24
     @include media-breakpoint-down(md) {
         font-size: 1.25rem;
     }
-}
-
-.h6, h6 {
-    text-transform: none;
 }
 
 strong {
@@ -112,7 +100,7 @@ strong {
 }
 
 .lead {
-    font-size: 1.45rem;
+    font-size: 1.25rem;//22
     font-family: $font-family-serif;
 }
 
