end of day commit && push

--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -11,6 +11,7 @@ $enable-print-styles: false;
 // Colors
 $primary: #205B94;
 $secondary: #E3931D;
+$site-yellow: #FED667;
 $primary-light: #959595;
 $mark-bg: #ffd61e;
 $selection-color: #d9edf7;
@@ -42,6 +43,7 @@ $font-family-base: $font-family-sans-serif;
 $headings-font-family: $font-family-serif;
 
 $headings-margin-bottom: $spacer;
+$line-height-base: 1.44444;
 
 // Figure
 $figure-margin: $spacer * 2.5;
