--- a/src/style/base/_typography.scss
+++ b/src/style/base/_typography.scss
@@ -23,7 +23,7 @@ body {
     -webkit-font-smoothing: antialiased;
     font-family: $font-family-base;
     -webkit-overflow-scrolling: touch;
-    line-height: 1.5;
+    line-height: $line-height-base;
 }
 
 .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
@@ -101,7 +101,7 @@ strong {
 
 .lead {
     font-size: 1.25rem;//22
-    font-family: $font-family-serif;
+    font-family: $font-family-base;
 }
 
 .text-md {
