--- a/src/style/components/_button.scss
+++ b/src/style/components/_button.scss
@@ -1,10 +1,38 @@
 button, .btn {
     cursor: pointer;
-    font-family: $font-family-serif;
+    font-family: $font-family-base;
     font-weight: 700;
-    border-radius: 0;
+    border-radius: 1.333333333rem;
+    padding-left: 1.5rem;
+    line-height: 1.35rem;
+    color: white;
+
+    &::after {
+        font-family: 'Font Awesome 5 Free';
+        content: '\f0a9';
+        font-size: 1.4rem;
+        font-weight: normal;
+        font-style: normal;
+        margin:0px 0px 0px 1.5rem;
+        text-decoration:none;
+        vertical-align: middle;
+    }
 
     &:focus {
         outline: none;
+    }
+}
+
+
+
+@each $color, $value in $theme-colors {
+    .btn-#{$color} {
+        background: linear-gradient(to right, darken($value, 10%) 0%, $value 35%);
+    }
+}
+
+@each $color, $value in $theme-colors {
+    .btn-#{$color}-cta {
+        background-color: $value;
     }
 }
