--- a/src/style/layouts/_content.scss
+++ b/src/style/layouts/_content.scss
@@ -1,5 +1,5 @@
 .section {
-    padding: 4rem 0;
+    padding: 2.5rem 0;
 
     &.section--sm {
         padding: 2rem 0;
@@ -30,7 +30,42 @@
         border-bottom: 8px solid $site-yellow;
     }
 }
+.card-img-top {
+    border-radius: 0;
+}
 
 .card-body {
     padding: 1.8rem 2.25rem;
+}
+
+.accomodation-deck {
+    overflow-y: hidden;
+    padding-bottom: 2.5rem;
+    .card {
+        min-width: 360px;
+        width: 360px;
+        margin-right: 30px;
+        margin-left: 30px;
+    }
+    .card-body {
+        padding-bottom: 2.5rem;
+    }
+}
+.instagram-gallery {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: 15px 15px;
+    @include random-min(25) {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    @include media-breakpoint-up(sm) {
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap: 30px 30px;
+    }
+    @include media-breakpoint-up(lg) {
+        grid-template-columns: repeat(4, 1fr);
+    }
+    @include media-breakpoint-up(xl) {
+        grid-template-columns: repeat(6, 1fr);
+    }
 }
