--- a/src/style/layouts/_footer.scss
+++ b/src/style/layouts/_footer.scss
@@ -1,6 +1,7 @@
 
 footer {
-    background: #6c6b6b;
+    background: #6c6b6b url('../images/footer-bg.jpg');
+    background-size: cover;
     h4 {
         color: #EFEFEF;
     }
