added owl carousel + small fixes

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,6 +1,9 @@
 // Bootstrap
 @import "bootstrap-custom";
 
+// Owl library
+@import "../../node_modules/owl.carousel/dist/assets/owl.carousel.css";
+
 // Base
 @import "base/typography";
 @import "base/global";
