completed nav updates

--- a/src/style/layouts/_header.scss
+++ b/src/style/layouts/_header.scss
@@ -24,6 +24,15 @@
 	color: $white;
 	font-weight: 700;
 }
+.c-height-100 {
+    height: 100%;
+}
+.c-flex {
+    display: flex;
+}
+.c-flex-colmn {
+    flex-direction: column;
+}
 
 .navbar-nav {
 
