--- a/src/style/layouts/_content.scss
+++ b/src/style/layouts/_content.scss
@@ -153,6 +153,8 @@ body {
     border-radius: 0;
     border: none;
     box-shadow: 0px 6px 70px -15px rgba(0, 0, 0, 0.45);
+    margin-left: 25px;
+    margin-right: 25px;
 
     img {
         border-bottom: 8px solid $site-yellow;
@@ -177,7 +179,7 @@ body {
 .acc-btn-set {
     
     a {
-        line-height: 39.5px;
+        line-height: 40px;
         height: 39.5px;
         text-align: center;
         display: inline-block;
