--- a/src/style/layouts/_content.scss
+++ b/src/style/layouts/_content.scss
@@ -56,19 +56,7 @@ body {
 }
 
 .section {
-    padding: 2.5rem 0;
-
-    &.section--sm {
-        padding: 2rem 0;
-    }
-
-    &.section--page {
-        padding: 2.5rem 0 4rem 0;
-    }
-
-    @include media-breakpoint-down(md) {
-        padding: 2rem 0;
-    }
+    padding: 3.5rem 0;
 }
 
 .home-newsletter-cta {
@@ -183,13 +171,16 @@ body {
     .card {
         min-width: 360px;
         width: 360px;
-        margin-right: 30px;
-        margin-left: 30px;
+        //margin-right: 30px;
+        //margin-left: 30px;
     }
 
     .card-body {
         padding-bottom: 2.5rem;
     }
+}
+.acc-controls {
+    max-width: 400px;
 }
 
 .instagram-gallery {
@@ -207,41 +198,10 @@ body {
         grid-template-columns: repeat(5, 1fr);
     }
 }
-
-
-.acc-btn-set {
-
-    a {
-        line-height: 40px;
-        height: 39.5px;
-        text-align: center;
-        display: inline-block;
-        width: 50px;
-        color: white;
-        background-color: #606060;
-        i.fas {
-            font-size: 24px;
-            vertical-align: text-bottom;
-        }
-    }
-    a.acc-btn-left {
-        border-radius: 2rem 0 0 2rem;
-        padding-left: 5px;
-    }
-    a.acc-btn-right{
-        border-radius: 0 2rem 2rem 0;
-        padding-right: 5px;
-        margin-left: -1px;
-    }
-}
-
 .owl-nav {
-    background: red;
+    //background: #606060;
     display: inline-block;
-    position: absolute;
-    top: -90px;
-    right: 320px;
-    border-radius: 2rem;
+
 }
 .owl-nav button {
     line-height: 40px;
@@ -249,20 +209,33 @@ body {
     text-align: center;
     display: inline-block;
     width: 50px;
-    color: white;
+    color: #979797;
     background-color: #606060;
+    border: none;
     i.fas {
         font-size: 24px;
         vertical-align: text-bottom;
     }
 }
 button.owl-next {
-    &:hover {
+    border-radius: 0 2rem 2rem 0;
+    padding: 0;
+    &:hover,
+    &:active {
         color: white;
+        background-color: #4c4b4b;
     }
 }
 button.owl-prev {
-    &:hover {
+    border-radius: 2rem 0 0 2rem;
+    padding: 0;
+    &:hover,
+    &:active
+    {
         color: white;
+        background-color: #4c4b4b;
     }
+}
+.owl-stage-outer {
+    padding-bottom: 2.3rem;
 }
