--- a/src/style/layouts/_form.scss
+++ b/src/style/layouts/_form.scss
@@ -1,5 +1,8 @@
 input[type="text"] {
     border-radius: 1.3333333333rem;
+    @include media-breakpoint-down(lg) {
+        text-align: center;
+    }
 }
 
 .group-breaker {
