Ie11 fixes to nav-area

--- a/src/style/layouts/_content.scss
+++ b/src/style/layouts/_content.scss
@@ -187,14 +187,23 @@ body {
     max-width: 1600px;
     margin-left: auto;
     margin-right: auto;
+
+    display: -ms-grid;
     display: grid;
+
+    -ms-grid-columns: 15px (1fr)[2];
     grid-template-columns: repeat(2, 1fr);
+
     grid-gap: 15px 15px;
+
     @include media-breakpoint-up(sm) {
+        -ms-grid-columns: 15px (1fr)[4];
         grid-template-columns: repeat(4, 1fr);
     }
     @include media-breakpoint-up(xl) {
         grid-gap: 30px 30px;
+
+        -ms-grid-columns: 30px (1fr)[5];
         grid-template-columns: repeat(5, 1fr);
     }
 }
