--- a/src/style/layouts/_header.scss
+++ b/src/style/layouts/_header.scss
@@ -1,17 +1,18 @@
 .topbar {
-	background: $top-bar-color;
-	color: rgba(white, 0.75);
+    background: $top-bar-color;
+    color: rgba(white, 0.75);
     padding: 1rem 0;
-    border-top: 4px solid darken($top-bar-color,7.5%);
+    border-top: 4px solid darken($top-bar-color, 7.5%);
 
-	a {
-		color:rgba(white, 0.75);
+    a {
+        color: rgba(white, 0.75);
         font-weight: 700;
         text-decoration: underline;
-	}
+    }
+
     @include e(telcta) {
         i {
-            color:rgba(white, 0.25);
+            color: rgba(white, 0.25);
         }
         a {
             color: white;
@@ -21,51 +22,64 @@
 }
 
 .navbar-toggler {
-	color: $white;
-	font-weight: 700;
+    color: $white;
+    font-weight: 700;
 }
+
 .c-height-100 {
     height: 100%;
 }
+
 .c-flex {
     display: flex;
 }
+
 .c-flex-colmn {
     flex-direction: column;
 }
 
+@media screen and (min-width: 992px) and (max-height: 768px) {
+    .logo-h {
+        width: 200px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
 .navbar-nav {
 
-	.menu-item {
-		@extend .flex-fill;
-		text-align: center;
+    .menu-item {
+        @extend .flex-fill;
+        text-align: center;
         color: $nav;
         @include media-breakpoint-up(lg) {
             text-align: left;
         }
-	}
+    }
 
-	.menu-item.active a,
-	.current-menu-ancestor.active a {
+    .menu-item.active a,
+    .current-menu-ancestor.active a {
 
-            background: url('../images/active-nob@2x.png') no-repeat -6px center;
-            font-weight: 700;
-            color: $active;
+        background: url('../images/active-nob@2x.png') no-repeat -6px center;
+        font-weight: 700;
+        color: $active;
 
 
-	}
+    }
 
-	.nav-link {
-		font-size: 1.111111111rem;
-		color: $nav;
-		padding: .5rem 2.8rem;
+    .nav-link {
+        font-size: 1.111111111rem;
+        color: $nav;
+        padding: .5rem 2.8rem;
         display: block;
 
-		&:hover {
+        &:hover {
             font-weight: 700;
-		}
-	}
+        }
+    }
 }
+
 .menu-switch {
     position: absolute;
     right: 1rem;
@@ -80,17 +94,19 @@
 }
 
 .menu-socialmedia-items {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
+    display: flex;
+
     li {
         padding: 5px 0;
         display: flex;
+        flex-grow: 1;
         justify-content: center;
 
         &:nth-child(even) {
             background-color: #606060;
         }
     }
+
     a {
         color: white;
         width: 100%;
