--- a/src/style/layouts/_content.scss
+++ b/src/style/layouts/_content.scss
@@ -60,7 +60,7 @@ body {
 }
 
 .home-newsletter-cta {
-    overflow:hidden;
+    overflow: hidden;
 }
 
 .home-intro-cta {
@@ -101,6 +101,7 @@ body {
 #gform_wrapper_1 .gform_footer {
     text-align: left !important;
 }
+
 .hone-newsletter-bgsplit {
     .img-clipblock {
         height: 100%;
@@ -108,6 +109,7 @@ body {
         top: 0;
     }
 }
+
 .img-clip-1 {
     background: url('../images/index-newsletter-img-1.jpg') no-repeat top center;
     -webkit-background-size: cover;
@@ -156,6 +158,7 @@ body {
 .card-body {
     padding: 1.8rem 2.25rem;
 }
+
 .accommodation-bg {
     padding-top: 4.333333333rem;
     border-top: 8px solid #c6c6c6;
@@ -163,6 +166,7 @@ body {
     -webkit-background-size: cover;
     background-size: cover;
 }
+
 .accommodation-deck {
 
     overflow-y: hidden;
@@ -171,47 +175,49 @@ body {
     .card {
         min-width: 360px;
         width: 360px;
-        //margin-right: 30px;
-        //margin-left: 30px;
-    }
 
-    .card-body {
-        padding-bottom: 2.5rem;
+        .card-body {
+            padding-bottom: 2.5rem;
+        }
     }
 }
+
 .acc-controls {
     max-width: 400px;
 }
 
-.instagram-gallery {
-    max-width: 1600px;
-    margin-left: auto;
-    margin-right: auto;
-
-    display: -ms-grid;
-    display: grid;
-
-    -ms-grid-columns: 15px (1fr)[2];
-    grid-template-columns: repeat(2, 1fr);
-
-    grid-gap: 15px 15px;
-
-    @include media-breakpoint-up(sm) {
-        -ms-grid-columns: 15px (1fr)[4];
-        grid-template-columns: repeat(4, 1fr);
-    }
-    @include media-breakpoint-up(xl) {
-        grid-gap: 30px 30px;
-
-        -ms-grid-columns: 30px (1fr)[5];
-        grid-template-columns: repeat(5, 1fr);
+.minki {
+    @include media-breakpoint-down(sm) {
+        font-size: .85rem;
     }
 }
+
+.instagram-gallery {
+    max-width: 1540px;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+
+    img {
+        margin: 0 .5rem 1rem;
+        width: 40%;
+        height: 100%;
+        @include media-breakpoint-up(sm) {
+            width: 20%;
+        }
+        @media (min-width: 1409.98px) {
+            width: 15%;
+        }
+    }
+}
+
 .owl-nav {
-    //background: #606060;
     display: inline-block;
 
 }
+
 .owl-nav button {
     line-height: 40px;
     height: 39.5px;
@@ -221,30 +227,35 @@ body {
     color: #979797;
     background-color: #606060;
     border: none;
+
     i.fas {
         font-size: 24px;
         vertical-align: text-bottom;
     }
 }
+
 button.owl-next {
     border-radius: 0 2rem 2rem 0;
     padding: 0;
+
     &:hover,
     &:active {
         color: white;
         background-color: #4c4b4b;
     }
 }
+
 button.owl-prev {
     border-radius: 2rem 0 0 2rem;
     padding: 0;
+
     &:hover,
-    &:active
-    {
+    &:active {
         color: white;
         background-color: #4c4b4b;
     }
 }
+
 .owl-stage-outer {
     padding-bottom: 2.3rem;
 }
