--- a/src/style/layouts/_footer.scss
+++ b/src/style/layouts/_footer.scss
@@ -2,19 +2,31 @@
 footer {
     background: #6c6b6b url('../images/footer-bg.jpg');
     background-size: cover;
+
     h4 {
         color: #EFEFEF;
     }
 
     p,
-    a
-    {
+    a {
         font-size: .888888889rem;
         color: rgba(#EFEFEF, .75);
     }
+
+    a {
+        &:link,
+        &:visited,
+        &:hover,
+        &:active {
+            font-size: .888888889rem;
+            color: rgba(#EFEFEF, .75);
+        }
+    }
+
     .footer-bar {
-        background-color: rgba(#363635,.98);
+        background-color: rgba(#363635, .98);
         color: #848484;
+
         a {
             color: inherit;
         }
@@ -23,36 +35,36 @@ footer {
 
 #mc-embedded-subscribe-form {
 
-	.mc-field-group {
-		@extend .form-group;
-	}
+    .mc-field-group {
+        @extend .form-group;
+    }
 
-	input[type="email"], input[type="text"] {
-		@extend .form-control;
-		border: none;
-	}
+    input[type="email"], input[type="text"] {
+        @extend .form-control;
+        border: none;
+    }
 
-	input[type="submit"] {
-		@extend .btn;
-		@extend .btn-dark;
-		@extend .btn-lg;
-	}
+    input[type="submit"] {
+        @extend .btn;
+        @extend .btn-dark;
+        @extend .btn-lg;
+    }
 
-	select {
-		@extend .custom-select;
-		border: none;
-	}
+    select {
+        @extend .custom-select;
+        border: none;
+    }
 
-	.checkbox {
-		@extend .form-check;
-		@extend .form-check-inline;
+    .checkbox {
+        @extend .form-check;
+        @extend .form-check-inline;
 
-		input {
-			@extend .form-check-input;
-		}
+        input {
+            @extend .form-check-input;
+        }
 
-		span {
-			@extend .form-check-label;
-		}
-	}
+        span {
+            @extend .form-check-label;
+        }
+    }
 }
