--- a/src/style/layouts/_content.scss
+++ b/src/style/layouts/_content.scss
@@ -1,8 +1,10 @@
 html,
 body {
     min-width: 320px;
-    @include media-breakpoint-down(sm) {
-        text-align: center;
+    #home-page {
+        @include media-breakpoint-down(sm) {
+            text-align: center;
+        }
     }
 }
 
@@ -20,6 +22,11 @@ body {
     @include media-breakpoint-up(lg) {
         margin-left: 300px;
     }
+}
+
+.padded-container {
+    padding-left: 3rem;
+    padding-right: 3rem;
 }
 
 
@@ -265,4 +272,14 @@ button.owl-prev {
 
 .owl-stage-outer {
     padding-bottom: 2.3rem;
+}
+
+#breadcrumbs {
+    text-transform: uppercase;
+    font-size: .777777778rem;
+    a {
+        margin-right: .166666667rem;
+        color: #343434;
+        font-weight: 700;
+    }
 }
